--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -12,4 +12,5 @@ body {
   align-items: center;
   background-color: #15191C;
   padding: 8px 16px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.16);
 }
