--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -36,10 +36,71 @@ body {
 
 /* MENU LATERAL */
 .menu-lateral {
+  position: absolute;
+  left: -100vw;
   display: flex;
   flex-direction: column;
+  width: 75vw;
+  height: 100vh;
+  background-color: #15191C;
+  transition: left .25s;
+  z-index: 99;
+}
+
+.menu-lateral--ativo {
+  left: 0;
+  transition: left .25s;
 }
 
 .menu-lateral__logo {
   align-self: center;
+  width: 118px;
+  padding: 16px;
+}
+
+.menu-lateral__link {
+  height: 75px;
+  color: #95999C;
+  padding-left: 64px;
+  display: flex;
+  align-items:  center;
+}
+
+.menu-lateral__link--ativo {
+  color: #ffffff;
+  padding-left: 56px;
+  border-left: 8px solid #ffffff;
+}
+
+.menu-lateral__link::before {
+  content: "";
+  width: 24px;
+  height: 24px;
+  font-size: 24px;
+  position: absolute;
+  left: 24px;
+}
+
+.menu-lateral__link--inicio::before {
+  content: "\e902";
+}
+
+.menu-lateral__link--videos::before {
+  content: "\e90e";
+}
+
+.menu-lateral__link--picos::before {
+  content: "\e909";
+}
+
+.menu-lateral__link--integrantes::before {
+  content: "\e903";
+}
+
+.menu-lateral__link--camisas::before {
+  content: "\e900";
+}
+
+.menu-lateral__link--pinturas::before {
+  content: "\e90a";
 }
