--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -108,10 +108,22 @@ body {
 /* PRINCIPAL */
 .principal {
   padding: 24px 16px;
+  display: grid;
+  gap: 16px;
+}
+
+.secao{
+  display: grid;
+  gap: 16px;
 }
 
 .titulo-pagina {
   font-size: 1.5rem;
+  font-weight: 700;
+}
+
+.titulo-secao {
+  font-size: 1.2rem;
   font-weight: 700;
 }
 
@@ -122,27 +134,31 @@ body {
   background-color: #2C343A;
 }
 
+.cartao--destaque {
+  margin-bottom: 16px;
+}
+
 .cartao__conteudo {
   padding: 16px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: auto 1fr;
+  gap: 8px;
 }
 
 .cartao__destaque {
   grid-column: span 2;
 }
+
 .cartao__titulo {
   font-size: 1.2rem;
   font-weight: 700;
   grid-column: span 2;
-
 }
 
 .cartao__perfil {
   color: #95999c;
   font-size: 0.9rem;
   grid-column: span 2;
-
 }
 
 .cartao__info {
@@ -170,6 +186,7 @@ body {
   height: 40px;
   border-radius: 10px;
   font-size: 0.9rem;
+  justify-self: flex-end;
 }
 
 .cartao__botao--play::before {
