--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -172,6 +172,11 @@ body {
   margin-right: 8px;
 }
 
+.cartao__info--preco::before {
+  content: '\e905';
+  margin-right: 8px;
+}
+
 .cartao__info--visualizacao::before {
   content: '\e90f';
   margin-right: 8px;
@@ -191,6 +196,11 @@ body {
 
 .cartao__botao--play::before {
   content: '\e90b';
+  font-size: 24px;
+}
+
+.cartao__botao--compra::before {
+  content: '\e901';
   font-size: 24px;
 }
 
